# LCD_HD44780

./: .clang-format  .gitignore  LICENSE  ReadMe.md  ReadMe.txt  ToDo_readme  cppcheck_report.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CI_Pipeline.yml  CI_pipeline.yml  clang-format_check.yml  jekyll-gh-pages.yml  run_cppcheck.yml  run_lcd_hd44780_test .yml  run_lcd_hd44780_test.yml  run_lizard_lib_check.yml  run_template_test.yml  self_hosted_test_not_ready.yml
config/: Toolchain-AVR-gcc.cmake  Toolchain-arm-gcc.cmake  compiler_flags.cmake
custo_char_gen_tool/: .gitignore  ReadMe.md  custom_char_gen.py  requirements.txt  test.json  test2.json  test3.json
doc/: Doxyfile  LCD_HD44780_doc.chm  info.txt
examples/ATMEGA328P_ARDUINO_UNO_R3/: .gitignore  CMakeLists.txt
examples/ATMEGA328P_ARDUINO_UNO_R3/inc/: project_config.h
examples/ATMEGA328P_ARDUINO_UNO_R3/src/: LCD_IO_driver.c  main.c
examples/ESP8266_NONOS_SDK/: Makefile
examples/ESP8266_NONOS_SDK/LCD_HD44780_TEST/: build.bat  build.sh  clean.bat  clean.sh
examples/ESP8266_NONOS_SDK/LCD_HD44780_TEST/include/: lcd_hd44780.h  lcd_hd44780_GPIO_interface.h  lcd_hd44780_config.h  lcd_hd44780_driver_commands.h  lcd_hd44780_interface.h
examples/ESP8266_NONOS_SDK/LCD_HD44780_TEST/user/: LCD_IO_driver_interface.c  lcd_hd44780.c  partitions.c  user_main.c
examples/STM32F091RB/Core/Inc/: core_init.h
examples/STM32F091RB/Core/Src/: core_init.c
examples/STM32G070RB/: CMakeLists.txt
examples/STM32G070RB/Core/Inc/: main.h
examples/STM32G071RB_NUCLEO_BARE_METAL/: CMakeLists.txt  linker.ld
examples/STM32G071RB_NUCLEO_BARE_METAL/Core/Inc/: main.h  tim_delay.h
examples/STM32G071RB_NUCLEO_BARE_METAL/Core/Src/: LCD_IO_driver.c  core_init.c  main.c  syscalls.c  tim_delay.c
examples/STM32G071RB_NUCLEO_BARE_METAL/Core/Startup/: startup_stm32g070rbtx.s
examples/STM32G474RE_NUCLEO_CUBE_IDE/: CMakeLists.txt  STM32G474RE_NUCLEO_CUBE_IDE.ioc
examples/STM32G474RE_NUCLEO_CUBE_IDE/Core/Inc/: main.h  tim_delay.h
examples/STM32G474RE_NUCLEO_CUBE_IDE/Core/Src/: LCD_IO_driver.c  main.c  tim_delay.c
examples/STM32G474RE_NUCLEO_CUBE_IDE_LL/: .mxproject  CMakeLists.txt  STM32G474RE_NUCLEO_CUBE_IDE.ioc
examples/STM32G474RE_NUCLEO_CUBE_IDE_LL/Core/Inc/: main.h
examples/STM32G474RE_NUCLEO_CUBE_IDE_LL/Core/Src/: LCD_IO_driver.c  main.c  stm32g4xx_it.c  tim_delay.c
examples/STM32G474RE_NUCLEO_CUBE_IDE_LL/Drivers/: CMakeLists.txt
examples/config/AVR/: AVR_compiler_flags.cmake  Toolchain-AVR-gcc.cmake
examples/lcd_driver_intrface_example_implementations/: AVR_IO_driver_interface_example.c  LCD_IO_driver_interface_template.c  STM32_bare_meta_IO_driver_interface_example.c
hw/ATMEGA328P_ARDUINO_UNO_R3/: CMakeLists.txt
hw/ATMEGA328P_ARDUINO_UNO_R3/inc/: debug.h
hw/ATMEGA328P_ARDUINO_UNO_R3/src/: debug.c  main.c
hw/STM32F030R8/: CMakeLists.txt
hw/STM32F030R8/Core/Src/: core_init.c
hw/STM32F091RB/: CMakeLists.txt  linker.ld
hw/STM32F091RB/Core/Src/: main.c
hw/STM32F091RB/Core/Startup/: startup_stm32f091rbtx.s
hw/STM32G070RB/: CMakeLists.txt
hw/STM32G070RB/Core/Inc/: core_init.h
hw/STM32G070RB/Drivers/CMSIS/Device/: stm32g070xx.h
hw/config/AVR/: AVR_compiler_flags.cmake  Toolchain-AVR-gcc.cmake
hw/config/STM32/: Toolchain-arm-gcc.cmake  compiler_flags.cmake
lib/: info.txt
reports/: cppcheck_report.txt
reports/Code_Coverage/: info.txt  lcd_hd44780_gcov_report.functions.html  lcd_hd44780_gcov_report.html  lcd_hd44780_gcov_report.lcd_hd44780.c.9b5fec2915da14d10e466e7fb812c453.html
reports/Cyclomatic_Complexity/: Lizard_report.html
src/: CMakeLists.txt  info.txt  lcd_hd44780.c  lcd_hd44780.h  lcd_hd44780_avr_specific.c  lcd_hd44780_avr_specific.h  lcd_hd44780_config.h  lcd_hd44780_def_char.h  lcd_hd44780_driver_commands.h  lcd_hd44780_interface.h
src/lcd_driver_intrface_example_implementations/: LCD_IO_driver.c
test/_config_scripts/: ReadMe.md
test/_config_scripts/run_targets/: config.yaml  run_targets.py
test/_config_scripts/venv_setup/: venv_setup.py
test/hw_test/: hw_test_main.c  hw_test_main.h
test/hw_test/ATMEGA328P_ARDUINO_UNO_R3/: CMakeLists.txt
test/hw_test/ATMEGA328P_ARDUINO_UNO_R3/config/: AVR_compiler_flags.cmake  Toolchain-AVR-gcc.cmake
test/hw_test/ATMEGA328P_ARDUINO_UNO_R3/src/: LCD_IO_driver.c  main.c
test/hw_test/STM32F030R8_CUBE_IDE/: .mxproject  CMakeLists.txt  STM32F030R8TX_FLASH.ld  STM32F030R8_CUBE_IDE.ioc
test/hw_test/STM32F030R8_CUBE_IDE/Core/Inc/: main.h  tim_delay.h
test/hw_test/STM32F030R8_CUBE_IDE/Core/Src/: LCD_IO_driver.c  main.c  stm32f0xx_it.c  tim_delay.c
test/hw_test/STM32F030R8_CUBE_IDE/Drivers/: CMakeLists.txt
test/hw_test/STM32F030R8_CUBE_IDE/Drivers/STM32F0xx_HAL_Driver/Inc/: stm32f0xx_ll_rcc.h
test/hw_test/STM32F030R8_CUBE_IDE/config/: compiler_flags.cmake
test/lcd_hd44780/: CMakeLists.txt  custom_targets.cmake  lcd_hd44780_buffering.c  lcd_hd44780_test.c  lcd_hd44780_test_basic_func.c  lcd_hd44780_test_buffering.c  lcd_hd44780_test_common.c  lcd_hd44780_test_common.h  lcd_hd44780_test_init.c  lcd_hd44780_test_main.c  lcd_hd44780_test_runner.c  mock_LCD_IO_driver.c  mock_LCD_IO_driver.h
test/lcd_hd44780/avr_code_test/: CMakeLists.txt
test/template/: CMakeLists.txt  HowToUse.txt  custom_targets.cmake  template_test.c  template_test_main.c  template_test_runner.c
